<resources>
    <string name="app_name">SleepCalm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listening">Escuchando…</string>
    <string name="pidiendo_permisos">Pidiendo permisos</string>
    <string name="action_settings">Action setting</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username_o_email">username o email</string>
    <string name="contrase_a">contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="repetir_contrase_a">repetir contraseña</string>
    <string name="he_leido_y_acepto_los_terminos_y_condiciones">He leido y acepto los terminos y condiciones</string>
    <string name="volver">Volver</string>
    <string name="icono_del_dispositivo">Icono del dispositivo</string>
    <string name="protocolo">Protocolo</string>
    <string name="nombre">Nombre</string>
    <string name="device_icon">Device icon</string>
    <string name="ayuda">Ayuda</string>
    <string name="probar">Probar</string>
    <string name="a_adir">Añadir</string>
    <string name="a_adir_dispositivo">Añadir dispositivo</string>
    <string name="menu">Menu</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="ip">IP</string>
    <string name="puerto">Puerto</string>
    <string name="endpoint">Endpoint</string>
    <string name="parametro">Parametro</string>
    <string name="boton_para_iniciar_o_desactivar_la_escucha">Boton para iniciar o desactivar la escucha</string>
    <string name="dispositivos_programados_para_su_desactivaci_n">dispositivos programados para su desactivación</string>
    <string name="interrogation">\?</string>
    <string name="horas_de_sue_o">Horas de sueño</string>
    <string name="lunes">L</string>
    <string name="martes">M</string>
    <string name="miercoles">X</string>
    <string name="jueves">J</string>
    <string name="viernes">V</string>
    <string name="sabado">S</string>
    <string name="domingo">D</string>
    <string name="tienes_que_iniciar_sesion">Tienes que iniciar sesion</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="editar_registros">Editar registros</string>
    <string name="borrar_registro">Borrar registro</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="escucha">Escucha</string>
    <string name="dispositivos">Dispositivos</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="usuario">Usuario</string>
    <string name="cerradaSesion">Cerrada sesion correctamente</string>
    <string name="no_se_ha_podido_hacer_logout">No se ha podido hacer logout</string>
    <string name="se_ha_cerrado_sesion">Se ha cerrado sesion</string>
    <string name="no_conexion_back">No se ha podido realizar la conexion con el back</string>
    <string name="necesitas_iniciar_sesion">Necesitas iniciar sesión para ello</string>
    <string name="datos_invalidos">Los datos no son validos</string>
    <string name="se_requiere_usuario_o_email">Se requiere nombre de usuario o email</string>
    <string name="se_requiere_contrase_a">Se requiere contraseña</string>
    <string name="se_require_username">Se requiere nombre de usuario</string>
    <string name="se_requiere_email">Se requiere un email valido</string>
    <string name="las_contrase_as_han_de_coincidir">Las contraseñas han de coincidir</string>
    <string name="terminos_y_condiciones">Se tienen que aceptar los terminos y condiciones</string>
    <string name="username_o_email_en_uso">El nombre de usuario o email ya estan en uso</string>
    <string name="email_invalido">El email no es valido</string>
    <string name="no_se_ha_podido_iniciar_sesion">No se ha podido iniciar sesion</string>
    <string name="cual_deseas_editar">Pulsa sobre la que deseas editar</string>
    <string name="cual_deseas_borrar">Pulsa sobre el que desees borrar</string>
    <string name="opcion_incorrecta">Eso no es una opcion correcta</string>
    <string name="no_hay_protocolo_seleccionado">No hay protocolo seleccionado</string>
    <string name="no_se_tienen_permisos">No se tienen los permisos para funcionar</string>
    <string name="escuchando">Escuchando...</string>
    <string name="listo_para_escuchar">Listo para escuchar.</string>
    <string name="dateFormat_invalido">El formato del dateFormat es invalido</string>
    <string name="cambiar_contrasenya">Cambiar contraseña</string>
    <string name="contrase_a_olvidada">Contraseña olvidada</string>
    <string name="enviar_correo_con_nueva_contrasenya">Enviar correo de recuperación</string>
    <string name="enviada_contra_temporal">Se envió un email con una contraseña temporal.</string>
    <string name="nueva_contrasenya">Nueva contraseña</string>
    <string name="contra_cambiada">Contraseña cambiada correctamente</string>
</resources>