<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounder_corners"
        android:gravity="center"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/detalle"
            android:foregroundTint="@color/detalle"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            >

            <EditText
                android:id="@+id/usernameOrEmailEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:foregroundTint="@color/detalle"
                android:hint="@string/username_o_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/detalle"
                android:textStyle="bold"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/detalle"
            android:foregroundTint="@color/detalle"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:foregroundTint="@color/detalle"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:textColor="@color/detalle"
                android:textStyle="bold"
                android:id="@+id/passwordEdit"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/sleep_score_fill0_wght400_grad0_opsz48"
            app:tint="@color/detalle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/iniciar_sesi_n"
            android:id="@+id/loginButton"
            android:background="@drawable/rounder_corners"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/registrarse"
            android:id="@+id/registerButton"
            android:background="@drawable/rounder_corners"
            />

    </LinearLayout>

</LinearLayout>