<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EndpointDeviceFragment"
    android:orientation="vertical"
    >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            >

            <EditText
                android:id="@+id/deviceEndpointIp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounder_corners"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/ip"
                android:textColor="@color/detalle"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            >

            <EditText
                android:id="@+id/deviceEndpointPuerto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounder_corners"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/puerto"
                android:textColor="@color/detalle"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            >

            <EditText
                android:id="@+id/deviceEndpointEndpoint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounder_corners"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/endpoint"
                android:textColor="@color/detalle"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <EditText
                android:id="@+id/deviceEndpointParametro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounder_corners"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/parametro"
                android:textColor="@color/detalle"
                android:textStyle="bold"
                />

        </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>